--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,17 @@ jobs:
         node-version: 16
         cache: 'npm'
     - run: yarn install
-      working-directory: client
     - run: yarn run lint
     - run: yarn test
+    
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16
+        cache: 'npm'
+    - run: yarn install
+    - run: yarn run build
