--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,7 @@ jobs:
     
   build:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 16
