--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 16
-        cache: 'npm'
+        cache: 'yarn'
     - run: yarn install
     - run: yarn run lint
     - run: yarn test
@@ -32,6 +32,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 16
-        cache: 'npm'
+        cache: 'yarn'
     - run: yarn install
     - run: yarn run build
