feat: setting up project

--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,14 @@
 {
-  "branches": ["main", "next"]
+  "branches": ["main"],
+  "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      ["@semantic-release/github", {
+        "assets": [
+          {"path": "dist/asset.min.css", "label": "CSS distribution"},
+          {"path": "dist/asset.min.js", "label": "JS distribution"}
+        ]
+      }],
+    ],
+    "assets": ["./build/*"]
 }
