feat: setting up project

--- a/.releaserc
+++ b/.releaserc
@@ -4,11 +4,7 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       ["@semantic-release/github", {
-        "assets": [
-          {"path": "dist/asset.min.css", "label": "CSS distribution"},
-          {"path": "dist/asset.min.js", "label": "JS distribution"}
-        ]
+        "assets": ['build/']
       }],
-    ],
-    "assets": ["./build/*"]
+    ]
 }
