--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,11 +35,16 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn run build
-    - name: Semantic Release
-      uses: codfish/semantic-release-action@v1
-      with:
-        # You can select another working directory like a subdirectory for example.
-        working_directory: ./build
+    - run: yarn semantiic-release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+#     - name: Semantic Release
+#       uses: codfish/semantic-release-action@v1
+#       with:
+#         # You can select another working directory like a subdirectory for example.
+#         working_directory: ./build
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
