--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,7 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn run build
+    - run: cp "package.json" "./build/package.json"
     - run: yarn semantic-release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
