--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,18 +35,15 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn run build
-    - run: cp "package.json" "./build/package.json"
-    - run: yarn semantic-release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - run: cd build && npm publish
-
-#     - name: Semantic Release
-#       uses: codfish/semantic-release-action@v1
-#       with:
-#         # You can select another working directory like a subdirectory for example.
-#         working_directory: ./build
+#     - run: cp "package.json" "./build/package.json"
+#     - run: yarn semantic-release
 #       env:
 #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+#     - run: cd build && npm publish
+
+    - name: Semantic Release
+      uses: codfish/semantic-release-action@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
