--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,6 +62,7 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: yarn install
+      - run: yarn run build
       - run: cp "package.json" "./build/package.json"
       - run: cd build && npm publish
         env:
