--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
     - run: yarn run lint
     - run: yarn test
     
-  build:
+  semantic:
     runs-on: ubuntu-latest
     needs: [setup]
     steps:
@@ -35,22 +35,13 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn run build
-#     - run: cp "package.json" "./build/package.json"
-#     - run: yarn semantic-release
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-#     - run: cd build && npm publish
-
-    - name: Semantic Release
-      uses: codfish/semantic-release-action@v1
+    - run: yarn semantic-release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}        
         
   publish-gpr:
-    needs: build
+    needs: [semantic]
     runs-on: ubuntu-latest
     permissions:
       contents: read
