--- a/.releaserc
+++ b/.releaserc
@@ -1,10 +1,9 @@
 {
   "branches": ["main"],
   "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      ["@semantic-release/github", {
-        "assets": ["build/*"]
-      }],
-    ]
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/changelog",
+    "@semantic-release/git",
+    "@semantic-release/github"
+   ]
 }
