--- a/.releaserc
+++ b/.releaserc
@@ -1,9 +1,10 @@
 {
   "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/changelog",
-    "@semantic-release/git",
-    "@semantic-release/github"
-   ]
+   "@semantic-release/commit-analyzer",
+   "@semantic-release/release-notes-generator",
+   "@semantic-release/changelog",
+   "@semantic-release/npm",
+   "@semantic-release/git"
+  ]
 }
