--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
         node-version: 16
         cache: 'yarn'
     - run: yarn install
-    - run: yarn run buil
+    - run: yarn run build
     - run: zip -r build.zip build
     - run: yarn semantic-release
       env:
