--- a/.releaserc
+++ b/.releaserc
@@ -7,7 +7,7 @@
    ["@semantic-release/github", {
         "assets": [{ "path":"build.zip", "label":"${nextRelease.gitTag}.zip" }]
    }],
-   ["@semantic-release/npm", { "pkgRoot": "./build/" }]
+   ["@semantic-release/npm", { "pkgRoot": "./build/" }],
    "@semantic-release/git"
   ]
 }
