--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,4 +42,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: cp "./build/package.json" "package.json"
+    - run: |
+        git add package.json
+        git commit -m "chore(release): package.json update [skip ci]"
+        git push origin main
 
