--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
        uses: actions/checkout@v2
      - name: Use Node.js
        uses: actions/setup-node@v1
+       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
          always-auth: true
          registry-url: https://npm.pkg.github.com
