--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: deploy
 on:
-  workflow_dispatch:
-    inputs:
-      tag:
+	workflow_dispatch:
+		inputs:
+			tag:
         description: 'Tag to be deployed'
         required: true
 
@@ -17,8 +17,7 @@ jobs:
        with:
          always-auth: true
          registry-url: https://npm.pkg.github.com
-     - run: |
-          npm i @rbelmega/crypto-trade@${{ github.event.inputs.tag }}
-	env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     - run: npm i @rbelmega/crypto-trade@${{ github.event.inputs.tag }}
+		   env:
+			   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+			   NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
