--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
-      PATHS: "/"
+      PATHS: "/*"
       AWS_REGION: "us-east-1"
-      
+
     steps:
       - name: checks out code
         uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
           always-auth: true
           registry-url: https://npm.pkg.github.com
       - run: npm i @rbelmega/crypto-trade@${{ github.event.inputs.tag }}
-      
+
       - name: Deploying to S3
         uses: Reggionick/s3-deploy@v3.1.1
         with:
@@ -42,4 +42,4 @@ jobs:
 
 
 
-       
+
