--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,8 @@ jobs:
       with:
         node-version: 16
         cache: 'yarn'
-    - run: yarn install
-    - run: yarn run lint
-    - run: yarn test
-    - run: yarn build
+    - run: |
+        yarn install
+        yarn run lint
+        yarn test
+        yarn build
