--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,4 +22,23 @@ jobs:
       - run: yarn install
       - run: yarn run lint
       - run: yarn test
-      - run: yarn build
+
+  semantic-release:
+      runs-on: ubuntu-latest
+      needs: [setup]
+      steps:
+        - run: yarn run build
+        - run: cp "package.json" "./build/package.json"
+        - run: zip -r build.zip build
+        - run: yarn semantic-release
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - run: cp "./build/package.json" "package.json"
+        - run: |
+            git config user.name "rbelmeha"
+            git config user.email "belmega31@gmail.com"
+        - run: |
+            git add package.json
+            git commit -m "chore(release): package.json update [skip ci]"
+            git push origin main
