--- a/.releaserc
+++ b/.releaserc
@@ -8,6 +8,9 @@
         "assets": [{ "path":"build.zip", "label":"${nextRelease.gitTag}.zip" }]
    }],
    ["@semantic-release/npm", { "pkgRoot": "./build/" }],
-   "@semantic-release/git"
+   ["@semantic-release/git", {
+        "assets": ["package.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }]
   ]
 }
