--- a/package.json
+++ b/package.json
@@ -27,22 +27,12 @@
     ]
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^7.0.4",
-    "prettier": "^2.5.1",
-    "sass": "^1.45.2",
-    "semantic-release": "^18.0.1",
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.7",
-    "@mui/x-data-grid": "^5.2.1",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -50,14 +40,26 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "eslint": "^8.6.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.2",
+    "semantic-release": "^18.0.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/rbelmega/crypto-trade.git"
+  },
+  "dependencies": {
+    "@mui/material": "^5.3.1",
+    "@mui/x-data-grid": "^5.4.0"
   }
 }
