--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,13 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-latest
-    env:
-      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
-      PATHS: "/*"
-      AWS_REGION: "us-east-1"
+#    env:
+#      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#      DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
+#      PATHS: "/*"
+#      AWS_REGION: "us-east-1"
 
     steps:
       - name: checks out code
@@ -28,18 +28,18 @@ jobs:
           registry-url: https://npm.pkg.github.com
       - run: npm i @rbelmega/crypto-trade@${{ github.event.inputs.tag }}
 
-      - name: Deploying to S3
-        uses: Reggionick/s3-deploy@v3.1.1
-        with:
-          folder: node_modules/@rbelmega/crypto-trade
-          bucket: ${{ secrets.S3_BUCKET }}
-          bucket-region: ${{ secrets.S3_BUCKET_REGION }}
-          no-cache: true
-          private: true
-      - name: Invalidate CloudFront
-        uses: chetan/invalidate-cloudfront-action@v2
-
-
-
-
-
+#      - name: Deploying to S3
+#        uses: Reggionick/s3-deploy@v3.1.1
+#        with:
+#          folder: node_modules/@rbelmega/crypto-trade
+#          bucket: ${{ secrets.S3_BUCKET }}
+#          bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+#          no-cache: true
+#          private: true
+#      - name: Invalidate CloudFront
+#        uses: chetan/invalidate-cloudfront-action@v2
+#
+#
+#
+#
+#
