--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-latest
-#    env:
-#      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
 #      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #      DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
