feat(JIRA-TICKET): application deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
           folder: node_modules/@rbelmega/crypto-trade
           bucket: ${{ secrets.S3_BUCKET }}
           bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+          private: true
 #          dist-id: ${{ secrets.DISTRIBUTION }}
 #          invalidation: /*
 #      - name: Invalidate CloudFront
